#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

==============
Tag: V00-03-95
2016-09-02 Mikhail S. Dubrovin
- AreaDetector, PyDetectorAccess - retrieve shape from env.configStore() object, and as a fallback from calib store (PSAS-139).
- size and ndim are retrieved from shape in PyDetectorAccess.
- update/fix datasets in examples.
M/A     examples/ex*
M       src/AreaDetector.py
M       src/PyDataAccess.py
M       src/PyDetectorAccess.py

Tag: V00-03-94
2016-08-30 Mikhail S. Dubrovin
- AreaDetector.py, PyDetectorAccess.py - add method gain_mask_non_zero, extending features of gain_mask
	
Tag: V00-03-93
2016-08-30 Mikhail S. Dubrovin
- app/det_ndarr_raw_proc - restrict a number of info messages with list of event codes by 20.

Tag: V00-03-92
2016-08-29 Mikhail S. Dubrovin
- app/det_ndarr_raw_proc - add option -c and class EventCodeManager (PSAS-139)

Tag: V00-03-91
2016-08-08 Mikhail S. Dubrovin
- AreaDetector.py, PyDetectorAccess.py - add method shape_config, update examples (PSAS-139)

Tag: V00-03-90
2016-08-05 Mikhail S. Dubrovin
- AreaDetector.py add method photons(.), update self-doc and ex_all_dets.py (PSAS-139)

Tag: V00-03-89
2016-07-28 Mikhail S. Dubrovin
- app/det_ndarr_raw_proc - add protection if det.raw is None

Tag: V00-03-88
2016-07-28 Mikhail S. Dubrovin
- in PyDetectorAccess.py add shape_config_cspad and expyda_cspad_shape.py

Tag: V00-03-87
2016-07-18 Christopher O'Grady
Fix bug where det.calib() was not checked early enough for None

Tag: V00-03-86
2016-07-11 Mikhail S. Dubrovin
- PyDetectorAccess - return all geometry arrays through _shaped_geo_array, force EPIX100A shape=(704, 768) (PSAS-139)